--- a/test/README
+++ b/test/README
@@ -9,3 +9,13 @@ in the development cycle.
 
 More information about PlatformIO Unit Testing:
 - https://docs.platformio.org/en/latest/advanced/unit-testing/index.html
+
+
+```pio run --target uploadfs
+    pip3 install esptool
+python -m pip install esptool
+pip2 install esptool
+pip install setuptools
+python -m esptool
+```
+python -m esptool --chip esp32 erase_flash
